--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,11 +4,13 @@
         <title>AirBnB clone</title>
         <link rel="stylesheet" href="styles/3-common.css" type="text/css">
         <link rel="stylesheet" href="styles/3-header.css" type="text/css">
-        <link rel="stylesheet" href="styles/3-footer.css" type="text.css">
+        <link rel="stylesheet" href="styles/3-footer.css" type="text/css">
         <link rel="tab icon" href="image/icon.png" type="iamge/png">
     </head>
     <body>
-        <header>hbnb</header>
+        <header>
+		<div class="logo"></div>
+	</header>
         <footer>Best School</footer>
     </body>
 </html>
