--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -4,7 +4,7 @@
         <title>AirBnB clone</title>
         <link rel="stylesheet" href="styles/2-common.css" type="text/css">
         <link rel="stylesheet" href="styles/2-header.css" type="text/css">
-        <link rel="stylesheet" href="styles/2-footer.css" type="text.css">
+        <link rel="stylesheet" href="styles/2-footer.css" type="text/css">
     </head>
     <body>
         <header></header>
