--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <header>
-            <div class="logo"></div>
+            <div class="logo">
+            </div>
         </header>
         <div class="container">
             <section class="filters">
